# newapi-subscription-redeemer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.example.env  docker-compose.yml  go.mod  main.go  pyproject.toml  redeemer.py  test_redeemer.py
.github/workflows/: docker-image.yml  release-binaries.yml
internal/redeemer/: redeemer.go  redeemer_test.go
src/newapi_subscription_redeemer/: __init__.py  redeemer.py
src/newapi_subscription_redeemer/web/: admin.html
web/: admin.html  app.js  index.html  styles.css
