[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "newapi-subscription-redeemer"
version = "0.1.0"
description = "Standalone service that turns local redemption codes into NewAPI subscriptions."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
newapi-subscription-redeemer = "newapi_subscription_redeemer.redeemer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
newapi_subscription_redeemer = ["web/*"]
